---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidInteger]: invalid integer: leading zeros are not allowed at `a`
  ┌─ pos_two_zeros:1:5
  │
1 │ a = +00
  │     ^^^ invalid integer: leading zeros are not allowed
